--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,46 @@
-/*
- * Estilos de tu proyecto
- */
+* {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #2c3e50;
+  height: 100px;
+  color: white;
+  font-family: Montserrat;
+}
+
+.menu {
+  display: inline-grid;
+  grid-column-gap: 100px
+}
+
+main {
+  background-color: #18bc9c;
+  height: 800px;
+  color: white;
+}
+
+.portfolio {
+  color: #2c3e50;
+  height: 800px;
+  font-family: Montserrat;
+}
+
+.about {
+  background-color: #18bc9c;
+  height: 800px;
+  color: white;
+  font-family: Montserrat;
+}
+
+.contactMe {
+  height: 800px;
+  color: #2c3e50;
+  font-family: Montserrat;
+}
+
+footer {
+  background-color: #2c3e50;
+  color: white;
+  height: 50px;
+}
