--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ nav ul {
   justify-content: flex-end;
   list-style: none;
   width: 865px;
-  outline: 1px solid red;
 }
 
 .start {
@@ -44,7 +43,6 @@ nav ul {
   font-size: 18px;
   padding: 22px;
   letter-spacing: 0.85px;
-  outline: 1px solid red;
 }
 
 .menuPortfolio:hover, .menuAbout:hover, .menuContact:hover {
@@ -53,7 +51,7 @@ nav ul {
 
 header {
   background-color: #18bc9c;
-  height: 992px;
+  height: 860px;
   color: white;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
@@ -73,6 +71,22 @@ header .p1 {
 header .p2 {
   font-family: 'Lato', sans-serif;
   font-size: 30px;
+}
+
+.line {
+  width: 110px;
+  text-align: center;
+  border-top: 3px solid;
+  display: inline-block;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.icon-star {
+  font-size: 40px;
+  margin: 10px;
+  top: -10px;
+  font-family: myfontastic;
 }
 
 .portfolio {
@@ -98,33 +112,42 @@ header .p2 {
 
 .about {
   background-color: #18bc9c;
-  font-size: 50px;
-  font-weight: 900;
-  height: 600px;
+  height: 800px;
   color: white;
-  font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
 
-.about div p {
+.about h2 {
+  padding-top: 100px;
+  padding-bottom: 0;
+  font-size: 52px;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.about p {
   font-family: 'Lato', sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: 34px;
-  padding: none;
+  padding: 0;
   text-align: left;
+}
+
+.text {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .textLeft {
   width: 390px;
-  margin-top: 100px;
-  display: inline-block;
+  margin-top: 30px;
 }
 
 .textRight {
   width: 390px;
-  display: inline-block;
-  align: top;
+  margin-top: 30px;
 }
 
 .contactMe {
@@ -136,6 +159,10 @@ header .p2 {
   text-align: center;
 }
 
+/* .around span {
+  font-family: FontAwesome;
+} */
+
 footer {
   background-color: #2c3e50;
   color: white;
@@ -144,7 +171,6 @@ footer {
   font-family: 'Montserrat', sans-serif;
   display: flex;
   text-align: center;
-  justify-content: space-around;
   padding-top: 50px;
 }
 
