--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,57 @@
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif
 }
 
 nav {
   background-color: #2c3e50;
-  height: 116px;
-  font-family: 'Montserrat', sans-serif;
+  height: 84px;
   display: flex;
   align-items: center;
   width: 100%;
-  position: fixed;
 }
 
 nav ul {
   display: flex;
-  justify-content: flex-end;
   list-style: none;
   width: 865px;
+  padding-left: 506px;
+  padding-bottom: 6px;
 }
 
 .start {
   text-decoration: none;
   color: white;
-  font-size: 34.5px;
-  font-weight: 700;
-  margin-left: 64px;
+  font-size: 26.6px;
+  font-weight: 800;
+  margin-left: 147px;
   padding: 10px 10px;
   padding-left: 0;
   padding-right: 0;
-  letter-spacing: 0.45px;
+  letter-spacing: -0.6px;
+  word-spacing: -1px;
 }
 
 .menuPortfolio, .menuAbout, .menuContact {
   text-decoration: none;
   color: white;
-  font-weight: 700;
-  font-size: 18px;
-  padding: 22px;
-  letter-spacing: 0.85px;
+  font-weight: 900;
+  font-size: 14.9px;
+  letter-spacing: 0.7px;
+  padding: 7px;
 }
 
 .menuPortfolio:hover, .menuAbout:hover, .menuContact:hover {
@@ -51,132 +60,247 @@ nav ul {
 
 header {
   background-color: #18bc9c;
-  height: 860px;
+  height: 665px;
   color: white;
-  font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
 
 header img {
-  margin-top: 222px;
-  width: 281.5px;
+  margin-top: 106px;
+  width: 243px;
 }
 
 header .p1 {
-  font-size: 83.5px;
-  font-weight: 700;
-  margin-top: 33px;
+  font-size: 70.7px;
+  font-weight: 800;
+  margin-top: 25px;
+  margin-left: 3.5px;
+  letter-spacing: -1.2px;
+  margin-bottom: 20px;
 }
 
 header .p2 {
   font-family: 'Lato', sans-serif;
-  font-size: 30px;
+  font-size: 26px;
+  margin-top: 19.2px;
+  font-weight: 700;
 }
 
 .line {
-  width: 110px;
-  text-align: center;
-  border-top: 3px solid;
+  width: 97px;
+  border-top: 4px solid;
   display: inline-block;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
-.icon-star {
-  font-size: 40px;
-  margin: 10px;
-  top: -10px;
-  font-family: myfontastic;
+.flaticon-star:before {
+  font-size: 30px!important;
+  margin: 8px!important;
 }
 
 .portfolio {
   color: #2c3e50;
-  height: 800px;
-  font-family: 'Montserrat', sans-serif;
+  height: 706px;
   text-align: center;
-  font-size: 50px;
+}
+
+.portfolio h2 {
+  margin-bottom: 8px;
+  font-size: 45px;
   font-weight: 700;
+  margin-top: 92px;
+  letter-spacing: -1px;
+}
+
+.portfolio .flaticon-star:before {
+  font-size: 30px!important;
+  margin: 8px!important;
+  text-align: center;
 }
 
 .portfolio a {
   display: inline-block;
-  /* position: relative; */
   text-align: justify;
 }
 
+.portfolio .images {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin
+}
+
 .portfolio img {
-  margin: 10px;
-  height: 280px;
-  width: 380px;
+  margin: 14px;
+  height: 240px;
+  width: 332px;
+  margin-top: 13px;
+  margin-left: 14px;
 }
 
 .about {
   background-color: #18bc9c;
-  height: 800px;
+  height: 545px;
   color: white;
   text-align: center;
 }
 
 .about h2 {
-  padding-top: 100px;
+  padding-top: 94px;
   padding-bottom: 0;
-  font-size: 52px;
+  font-size: 43px;
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 9px;
+}
+
+.about .flaticon-star:before {
+  font-size: 30px!important;
+  margin: 8px!important;
 }
 
 .about p {
   font-family: 'Lato', sans-serif;
-  font-size: 22px;
+  font-size: 19px;
   font-weight: 400;
-  line-height: 34px;
-  padding: 0;
+  line-height: 28px;
+  width: 350px;
+  padding-left: 16px;
+  margin: 0;
+  margin-top: 12px;
   text-align: left;
 }
 
 .text {
   display: flex;
-  align-items: flex-start;
   justify-content: center;
+  margin-right: 16px;
+  margin-top: 2px;
 }
 
 .textLeft {
-  width: 390px;
-  margin-top: 30px;
+  margin-right: 10px;
 }
 
-.textRight {
-  width: 390px;
-  margin-top: 30px;
+.download {
+  display: inline-block;
+  border: 1px solid white;
+  width: 205px;
+  height: 45px;
+  margin-top: 32px;
+  padding-top: 8px;
+  padding-right: 16px;
+  border-radius: 5px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 19px;
 }
 
 .contactMe {
-  height: 800px;
+  height: 804px;
   color: #2c3e50;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 50px;
-  font-weight: 700;
   text-align: center;
 }
 
-/* .around span {
-  font-family: FontAwesome;
-} */
+.contactMe h2 {
+  font-size: 44px;
+  font-weight: 800px;
+  padding-top: 56px;
+  margin-bottom: 8px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: center;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  width: 828px;
+  padding-top: 40px;
+  margin-left: 265px;
+  line-height: 32px;
+  word-spacing: 4px;
+}
+
+.contactTags {
+  height: 89px;
+}
+
+.contactLastTag {
+  height: 170px;
+  border-bottom: 1px solid grey;
+}
+
+.contactTags input {
+  border: none;
+  width: 700px;
+  border-bottom: 1px solid grey;
+}
+
+.contactLastTag input {
+  border: none;
+  width: 700px;
+}
+
+.button {
+  background-color: #18bc9c;
+  color: white;
+  border-radius: 5px;
+  border-color: #18bc9c;
+  padding: 10px;
+  text-decoration: none;
+  cursor: pointer;
+  border-style: none;
+  width: 74px;
+  height: 46px;
+  font-size: 19px;
+  margin-top: 24px;
+  margin-left: -629px;
+}
 
 footer {
+  text-align: center;
   background-color: #2c3e50;
   color: white;
-  height: 335px;
-  font-size: 22px;
-  font-family: 'Montserrat', sans-serif;
+  height: 254px;
+  padding-top: 19px;
+}
+
+.footerItens {
   display: flex;
-  text-align: center;
-  padding-top: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0px 20px;
+}
+
+.around {
+  padding-bottom: 50px;
+  width: 380px;
+}
+
+.around i {
+  letter-spacing: -7px;
+}
+
+.around h3 {
+  margin-bottom: 38px;
+}
+
+footer h3 {
+  font-size: 28px;
+  letter-spacing: -2px;
 }
 
 footer p {
   font-family: "Lato", sans-serif;
   font-weight: 400;
+  font-size: 19px;
+  width: 340px;
+}
+
+.flaticon-facebook::before, .flaticon-social-media::before, .flaticon-twitter::before, .flaticon-linkedin::before, .flaticon-dribble-big-logo::before {
+  font-size: 45px!important;
+  margin: 6px!important;
 }
 
 footer a {
@@ -185,11 +309,13 @@ footer a {
 }
 
 .copyright {
-  font-size: 14px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  font-family: "Lato", sans-serif;
+  height: 70px;
+  font-size: 14.9px;
+  font-weight: 400;
+  background-color: #2c3e50;
   color: white;
-  background-color: #1a252f;
-  text-align: center;
-  padding: 16px;
+  padding-top: 11px;
 }
