--- a/css/main.css
+++ b/css/main.css
@@ -18,36 +18,38 @@ html, body {
 }
 
 nav {
-  background-color: #2c3e50;
-  height: 84px;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  background-color: #2c3e50;
+  height: 84px;
   width: 100%;
 }
 
 nav ul {
   display: flex;
+  justify-content: flex-end;
   list-style: none;
-  width: 865px;
-  padding-left: 506px;
+  width: 100%;
   padding-bottom: 6px;
+  padding-right: 150px;
 }
 
 .start {
+  display: flex;
+  justify-content: flex-end;
   text-decoration: none;
+  width: 47%;
   color: white;
   font-size: 26.6px;
   font-weight: 800;
-  margin-left: 147px;
-  padding: 10px 10px;
-  padding-left: 0;
-  padding-right: 0;
   letter-spacing: -0.6px;
   word-spacing: -1px;
 }
 
 .menuPortfolio, .menuAbout, .menuContact {
   text-decoration: none;
+  width: 53%;
   color: white;
   font-weight: 900;
   font-size: 14.9px;
@@ -75,16 +77,15 @@ header .p1 {
   font-size: 70.7px;
   font-weight: 800;
   margin-top: 25px;
-  margin-left: 3.5px;
-  letter-spacing: -1.2px;
   margin-bottom: 20px;
+  letter-spacing: -1.2px;
 }
 
 header .p2 {
   font-family: 'Lato', sans-serif;
+  font-weight: 700;
   font-size: 26px;
   margin-top: 19.2px;
-  font-weight: 700;
 }
 
 .line {
@@ -106,9 +107,9 @@ header .p2 {
 
 .portfolio h2 {
   margin-bottom: 8px;
+  margin-top: 92px;
   font-size: 45px;
   font-weight: 700;
-  margin-top: 92px;
   letter-spacing: -1px;
 }
 
@@ -127,15 +128,12 @@ header .p2 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin
 }
 
 .portfolio img {
-  margin: 14px;
+  margin: 13px 14px;
   height: 240px;
   width: 332px;
-  margin-top: 13px;
-  margin-left: 14px;
 }
 
 .about {
@@ -147,10 +145,9 @@ header .p2 {
 
 .about h2 {
   padding-top: 94px;
-  padding-bottom: 0;
+  margin-bottom: 9px;
   font-size: 43px;
   font-weight: 700;
-  margin-bottom: 9px;
 }
 
 .about .flaticon-star:before {
@@ -164,10 +161,10 @@ header .p2 {
   font-weight: 400;
   line-height: 28px;
   width: 350px;
+  text-align: left;
   padding-left: 16px;
   margin: 0;
   margin-top: 12px;
-  text-align: left;
 }
 
 .text {
@@ -182,17 +179,21 @@ header .p2 {
 }
 
 .download {
-  display: inline-block;
-  border: 1px solid white;
-  width: 205px;
-  height: 45px;
-  margin-top: 32px;
-  padding-top: 8px;
-  padding-right: 16px;
-  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.downloadButton {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 19px;
+  border: 1px solid white;
+  border-radius: 5px;
+  width: 205px;
+  height: 45px;
+  margin-top: 32px;
+  padding-top: 9px;
+  padding-right: 16px;
 }
 
 .contactMe {
@@ -242,7 +243,7 @@ form {
 }
 
 .button {
-    width: 694px;
+  width: 694px;
 }
 
 .button input {
