--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ nav ul {
   word-spacing: -1px;
 }
 
-.menuPortfolio, .menuAbout, .menuContact {
+.menu {
   text-decoration: none;
   width: 53%;
   color: white;
@@ -57,7 +57,7 @@ nav ul {
   padding: 7px;
 }
 
-.menuPortfolio:hover, .menuAbout:hover, .menuContact:hover {
+.menu:hover {
   color: #18bc9c;
 }
 
@@ -197,7 +197,7 @@ header .p2 {
 }
 
 .contactMe {
-  height: 804px;
+  height: 805px;
   color: #2c3e50;
   text-align: center;
 }
